fix(FIBDevCmd): fix tab completions